# isoneFTR

./: README.md  docker-compose.yml  ftr_auction_results_isone.py  ftr_logger.py  ftr_utils.py  ftr_valuation.py  iso_lmp_data.py  lmp_data_load.py  pyproject.toml  requirements.txt
auction_data/: long_term_2_ftr_auction_results_2024.csv  monthly_ftr_auction_results_202401.csv  monthly_ftr_auction_results_202402.csv  monthly_ftr_auction_results_202403.csv  monthly_ftr_auction_results_202405.csv  monthly_ftr_auction_results_202406.csv  monthly_ftr_auction_results_202410.csv
data/: long_term_1_ftr_auction_results_2024.csv  monthly_ftr_auction_results_202404.csv  monthly_ftr_auction_results_202407.csv  monthly_ftr_auction_results_202408.csv  monthly_ftr_auction_results_202409.csv
ddl/: isone_ftr.sql
